# kinmu_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
annealing/: Cargo.toml
annealing/src/: annealing.rs  lib.rs
config/: config.yaml
config_template/: main_config.toml  main_config.yaml  schedule_config.toml  schedule_config.yaml
config_template/annealing_configs/: annealing_config_1.yaml  annealing_config_2.toml
crates/kinmu_annealing/: Cargo.toml
crates/kinmu_annealing/src/: annealing.rs  lib.rs
crates/kinmu_color/: Cargo.toml
crates/kinmu_color/src/: lib.rs
crates/kinmu_core/: Cargo.toml
crates/kinmu_core/src/: lib.rs
crates/kinmu_generator/: Cargo.toml
crates/kinmu_generator/src/: lib.rs
crates/kinmu_generator_with_annealing/: Cargo.toml
crates/kinmu_generator_with_annealing/src/: lib.rs  seed.rs
crates/kinmu_input/: Cargo.toml
crates/kinmu_input/src/: lib.rs
crates/kinmu_input/src/checker/: mod.rs
crates/kinmu_input/src/converter/: annealing_config.rs  main_config.rs  mod.rs  schedule_config.rs
crates/kinmu_input/src/converter/util/: mod.rs  parser.rs
crates/kinmu_input/src/reader/: mod.rs
crates/kinmu_input/src/reader/types/: schedule_config.rs
crates/kinmu_input_by_file/: Cargo.toml
crates/kinmu_input_by_file/src/: lib.rs
crates/kinmu_input_by_file/src/converter/: annealing_config.rs  mod.rs  schedule_config.rs
crates/kinmu_input_by_file/src/converter/util/: mod.rs  parser.rs
crates/kinmu_input_by_file/src/reader/: mod.rs
crates/kinmu_input_by_file/src/reader/types/: annealing_config.rs  main_config.rs  schedule_config.rs
crates/kinmu_internal/: Cargo.toml
crates/kinmu_internal/src/: lib.rs
crates/kinmu_lib/: Cargo.toml
crates/kinmu_lib/src/: cond.rs  config.rs  fill.rs  lib.rs  mod.rs  schedule.rs  update.rs
crates/kinmu_lib/src/fill/: fill_iak_safe.rs  fill_noh.rs  mod.rs  no_fill.rs
crates/kinmu_lib/src/score/: day_count_regard_staff_attribute.rs  mod.rs  ng_pair.rs  no_same_pair.rs  pattern_fixed.rs  pattern_fixed_any.rs  pattern_general.rs  pattern_general_any.rs  shift_count_regard_staff_attribute.rs  shift_dir_priority.rs  shift_distance.rs  shift_half_balance.rs  shifts_balance.rs  shifts_count_at_most.rs  staff_count.rs  staff_count_at_least.rs  staff_count_regard_day_attribute.rs  staff_count_variance.rs  staff_count_with_premise.rs  streak.rs
crates/kinmu_lib/src/score/eval/: day_count_regard_staff_attribute.rs  mod.rs  ng_pair.rs  no_same_pair.rs  pattern_fixed.rs  pattern_fixed_any.rs  pattern_general.rs  pattern_general_any.rs  shift_dir_priority.rs  shift_half_balance.rs  shifts_balance.rs  staff_count.rs  staff_count_at_least.rs  staff_count_regard_day_attribute.rs  staff_count_with_premise.rs  streak.rs
crates/kinmu_lib/src/types/: cond.rs  mod.rs  schedule.rs  score.rs  staff.rs
crates/kinmu_lib/src/types/config/: main_config.rs  mod.rs  schedule_config.rs
crates/kinmu_lib/src/update/: iak_safe.rs  iaknoh.rs  iaknoh_repeat.rs  mod.rs  noh_repeat.rs  range.rs  range_or_iaknoh_repeat.rs  range_or_noh_repeat.rs
crates/kinmu_macro/: Cargo.toml
crates/kinmu_macro/src/: lib.rs
crates/kinmu_macros/: Cargo.toml
crates/kinmu_macros/src/: lib.rs  score_prop.rs
crates/kinmu_model/: Cargo.toml
crates/kinmu_model/src/: answer.rs  lib.rs  schedule.rs  score.rs  staff.rs
crates/kinmu_model/src/config/: annealing_config.rs  main_config.rs  mod.rs  schedule_config.rs
crates/kinmu_model/src/types/: mod.rs  score.rs
crates/kinmu_output/: Cargo.toml
crates/kinmu_output/src/: lib.rs
crates/kinmu_output/src/text/: display.rs  mod.rs
crates/kinmu_output_html/: Cargo.toml
crates/kinmu_output_html/src/: lib.rs
crates/kinmu_output_text/: Cargo.toml
crates/kinmu_output_text/src/: lib.rs
docs/: index.md
docs/annealing_config/: index.md
docs/how_to_config/: index.md
docs/how_to_config/annealing_config/: index.md
docs/how_to_config/how_to_toml/: index.md
docs/how_to_config/main_config/: index.md
docs/how_to_config/schedule_config/: index.md
docs/how_to_run/: index.md
docs/main_config/: index.md
docs/schedule_config/: index.md
docs/to_modify/: index.md
example/: main_config.toml  schedule_config.toml
example/annealing_configs/: annealing_config_1.toml  annealing_config_2.toml
example/range/: main_config.toml  output.html  output.txt  schedule_config.toml
example/range/annealing_configs/: range.toml
example/real_case/: main_config.toml  output.html  output.txt  schedule_config.toml
example/real_case/annealing_configs/: IAK.toml  NOH.toml  random_walk.toml
example/simple_case/: main_config.toml  output.html  output.txt  schedule_config.toml
example/simple_case/annealing_configs/: annealing_config_1.toml  annealing_config_2.toml
src/: annealing.rs  check.rs  fill.rs  iofile.rs  kata.rs  lib.rs  main.rs  output_text_or_html.rs  score.rs  seed.rs  show_hyou.rs  test_lib.rs  update.rs
src/generator/: mod.rs
src/io/: display.rs  mod.rs  read_file.rs  reader.rs  show_hyou.rs
src/io/input/: mod.rs
src/io/input/checker/: mod.rs
src/io/input/converter/: annealing_config.rs  checker.rs  common.rs  main_config.rs  mod.rs  parser.rs  schedule_config.rs
src/io/input/converter/loader/: annealing_config.rs  (+3 more)
src/io/input/reader/: mod.rs
src/io/output/: display.rs  mod.rs
src/io/output/terminal/: display.rs  mod.rs
src/io/output/text/: color.rs  display.rs  mod.rs
src/io/reader/: common.rs  mod.rs  seed.rs  toml_reader.rs  type_reader.rs
src/kinmu_lib/: check.rs  fill.rs  kata.rs  mod.rs  score.rs  seed.rs  types.rs  update.rs
src/kinmu_lib/score/: day_count_regard_staff_attribute.rs  mod.rs  ng_pair.rs  no_same_pair.rs  pattern_fixed.rs  pattern_fixed_any.rs  pattern_general.rs  pattern_general_any.rs  shift_dir_priority.rs  shift_half_balance.rs  shifts_balance.rs  staff_count.rs  staff_count_at_least.rs  staff_count_regard_day_attribute.rs  staff_count_with_premise.rs  streak.rs
src/kinmu_lib/types/: cond.rs  mod.rs  schedule.rs  score.rs  staff.rs
src/kinmu_lib/types/config/: annealing_config.rs  main_config.rs  mod.rs  schedule_config.rs
(+8 files in other folders)
