[package]
name = "kinmu"
version = "2.3.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Practical solver for real-world nurse scheduling problems."
repository = "https://github.com/unsharot/kinmu_rs"

[workspace]
members = [
    "annealing",
]

[dependencies]
rand = "0.8.5"
annealing = { path = "annealing" }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.8.19"
color-print = "0.3.7"
getopts = "0.2.21"
anyhow = "1.0.95"
