[package]
name = "kinmu"
version = "2.3.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Practical solver for real-world nurse scheduling problems."
repository = "https://github.com/unsharot/kinmu_rs"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
kinmu_generator = { path = "crates/kinmu_generator" }
kinmu_input = { path = "crates/kinmu_input" }
kinmu_output = { path = "crates/kinmu_output" }
kinmu_color = { path = "crates/kinmu_color" }
kinmu_annealing = { path = "crates/kinmu_annealing" }
kinmu_lib = { path = "crates/kinmu_lib" }
kinmu_core = { path = "crates/kinmu_core" }
kinmu_model = { path = "crates/kinmu_model" }
anyhow = "1.0.95"
rand = "0.8.5"


[dependencies]
kinmu_generator = { workspace = true }
kinmu_input = { workspace = true }
kinmu_output = { workspace = true }
kinmu_color = { workspace = true }
kinmu_lib = { workspace = true }
kinmu_core = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
getopts = "0.2.21"
