[package]
name = "kinmu"
version = "2.3.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Practical solver for real-world nurse scheduling problems."
repository = "https://github.com/unsharot/kinmu_rs"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
kinmu_generator_with_annealing = { path = "crates/kinmu_generator_with_annealing" }
kinmu_input = { path = "crates/kinmu_input" }
kinmu_output = { path = "crates/kinmu_output" }
kinmu_color = { path = "crates/kinmu_color" }
kinmu_annealing = { path = "crates/kinmu_annealing" }
kinmu_lib = { path = "crates/kinmu_lib" }
kinmu_core = { path = "crates/kinmu_core" }
kinmu_model = { path = "crates/kinmu_model" }
kinmu_macros = { path = "crates/kinmu_macros" }
kinmu_internal = { path = "crates/kinmu_internal" }
anyhow = "1.0.95"
rand = "0.8.5"


[dependencies]
kinmu_internal = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
getopts = "0.2.21"
