[package]
name = "kinmu_generator_with_annealing"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides multi-threaded simulated annealing generator for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[dependencies]
kinmu_model = { workspace = true }
kinmu_annealing = { workspace = true }
kinmu_core = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
