[package]
name = "kinmu_input"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides file-based config input for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[dependencies]
kinmu_model = { workspace = true }
kinmu_core = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.8.19"
