[package]
name = "kinmu_internal"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides internal subcrates for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[dependencies]
kinmu_generator_with_annealing = { workspace = true }
kinmu_input = { workspace = true }
kinmu_output = { workspace = true }
kinmu_lib = { workspace = true }
kinmu_core = { workspace = true }
kinmu_model = { workspace = true }
kinmu_macros = { workspace = true }
kinmu_color = { workspace = true }
