[package]
name = "kinmu_macros"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides procedural macros for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = {version = "2.0.99", features = ["full", "extra-traits", "visit-mut", "visit"]}
kinmu_model = { workspace = true }
