[package]
name = "kinmu_output"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides text-based output for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[dependencies]
kinmu_model = { workspace = true }
kinmu_color = { workspace = true }
kinmu_core = { workspace = true }
anyhow = { workspace = true }
