[package]
name = "kinmu_output_html"
version = "0.1.0"
authors = ["unsharot"]
edition = "2021"
license = "MIT"
description = "Provides html output for kinmu."
repository = "https://github.com/unsharot/kinmu_rs"

[dependencies]
kinmu_model = { workspace = true }
kinmu_core = { workspace = true }
anyhow = { workspace = true }
